--- a/src/app/posts/post-create/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create/post-create.component.html
@@ -1,17 +1,33 @@
 <mat-card>
-  <form (submit)="onAddPost(postForm)" #postForm='ngForm'> <!-- -->
+  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+    <!-- -->
     <mat-form-field>
-      <input matInput type="text" ngModel name="title" required #title='ngModel'>
+      <input
+        matInput
+        type="text"
+        ngModel
+        name="title"
+        placeholder="Post Title"
+        required
+        #title="ngModel"
+      />
       <mat-error *ngIf="title.invalid">Please enter a post title!</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <textarea matInput rows="6" name="content" ngModel required #content="ngModel"></textarea>
-      <mat-error *ngIf="content.invalid">Please enter a post content!</mat-error>
+      <textarea
+        matInput
+        rows="6"
+        name="content"
+        ngModel
+        placeholder="Post content"
+        required
+        #content="ngModel"
+      ></textarea>
+      <mat-error *ngIf="content.invalid"
+        >Please enter a post content!</mat-error
+      >
     </mat-form-field>
-    <button
-    mat-raised-button
-    color="accent"
-    type="submit">Save post</button>
+    <button mat-raised-button color="accent" type="submit">Save post</button>
   </form>
 </mat-card>
 
