--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,9 +1,13 @@
-<mat-accordion *ngIf="posts.length>0">
+<mat-accordion *ngIf="posts.length > 0">
   <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
-      {{post.title}}
+      {{ post.title }}
     </mat-expansion-panel-header>
-    <p>{{post.content}}</p>
+    <p>{{ post.content }}</p>
+    <mat-action-row>
+      <button mat-button color="accent">EDIT</button>
+      <button mat-button color="warn">DELETE</button>
+    </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
-<p class = "info-text mat-body-2" *ngIf="posts.length<= 0">No posts</p>
+<p class="info-text mat-body-2" *ngIf="posts.length <= 0">No posts</p>
