--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
 <main>
-  <app-post-create></app-post-create>
-  <app-post-list></app-post-list>
+  <router-outlet></router-outlet>
+  <!-- <app-post-create></app-post-create>
+  <app-post-list></app-post-list> -->
   <!-- <app-post-create (postCreated)="onPostAdded($event)"></app-post-create> kiedy emitujemy property to musimy napisac kiedy bedzie wywolywane -->
   <!-- <app-post-list [posts]="storedPosts"></app-post-list> przekazujemy liste postow od rodzica do dziecka -->
 </main>
