--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -1,1 +1,11 @@
-<mat-toolbar>My toolbar</mat-toolbar>
+<mat-toolbar
+  ><span><a routerLink="/">My Posts</a></span>
+  <span class="spacer"></span>
+  <ul>
+    <li>
+      <a mat-button routerLink="/create" routerLinkActive="mat-accent"
+        >Create new post</a
+      >
+    </li>
+  </ul>
+</mat-toolbar>
