--- a/src/app/posts/post-create/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create/post-create.component.html
@@ -1,29 +1,33 @@
 <mat-card>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
+  <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
     <mat-form-field>
       <input
         matInput
         type="text"
-        [ngModel]="post?.title"
         name="title"
+        formControlName="title"
         placeholder="Post Title"
-        required
-        #title="ngModel"
       />
-      <mat-error *ngIf="title.invalid">Please enter a post title!</mat-error>
+      <mat-error *ngIf="form.get('title').invalid"
+        >Please enter a post title!</mat-error
+      >
     </mat-form-field>
+    <div>
+      <button mat-stroked-button type="button" (click)="filePicker.click()">
+        Pick Image
+      </button>
+      <input type="file" #filePicker />
+    </div>
     <mat-form-field>
       <textarea
         matInput
-        rows="6"
+        rows="4"
         name="content"
-        [ngModel]="post?.content"
         placeholder="Post content"
-        required
-        #content="ngModel"
+        formControlName="content"
       ></textarea>
-      <mat-error *ngIf="content.invalid"
+      <mat-error *ngIf="form.get('conent').invalid"
         >Please enter a post content!</mat-error
       >
     </mat-form-field>
