--- a/src/app/posts/post-create/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create/post-create.component.html
@@ -17,7 +17,13 @@
       <button mat-stroked-button type="button" (click)="filePicker.click()">
         Pick Image
       </button>
-      <input type="file" #filePicker />
+      <input type="file" #filePicker (change)="onImagePicked($event)" />
+    </div>
+    <div
+      class="image-preview"
+      *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid"
+    >
+      <img [src]="imagePreview" [alt]="form.value.title" />
     </div>
     <mat-form-field>
       <textarea
@@ -27,7 +33,7 @@
         placeholder="Post content"
         formControlName="content"
       ></textarea>
-      <mat-error *ngIf="form.get('conent').invalid"
+      <mat-error *ngIf="form.get('content').invalid"
         >Please enter a post content!</mat-error
       >
     </mat-form-field>
